# find_videos

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20230217083524_events.down.sql  20230217083524_events.up.sql  20230217083524_file.down.sql  20230217083524_file.up.sql  20230223023736_events.down.sql  20230223023736_events.up.sql
src/: cli.rs  database.rs  event.rs  file.rs  find.rs  log.rs  main.rs  scan.rs  settings.rs  util.rs
