[package]
name = "find_videos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time", "local-time"] }
time = { version = "0.3.19", features = ["macros"] }
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json", "uuid"] }
async-trait = "0.1.64"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
sql-builder = "3.1.1"
serde_json = "1.0.93"
whoami = "1.3.0"
eyre = "0.6.8"
async-walkdir = "0.2.0"
tokio-stream = "0.1.12"
futures = "0.3.26"
fs-err = "2.9.0"
config = { version = "0.13", default-features = false, features = ["toml"] }
toml = "0.7.2"
